--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/table_and_pagination.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/table_and_pagination.scss
@@ -1,7 +1,5 @@
-// Version 1.0.0
-
 .tableAndPagination {
-    .container_buttons {
+    .button_container {
         display: none;
     }
     .previous, .text, .next {
