--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/popup_easy.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/popup_easy.html.twig
@@ -7,8 +7,8 @@
             Content
         </section>
         <footer class="mdc-dialog__footer">
-            <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Decline</button>
-            <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Accept</button>
+            <button class="mdc-button mdc-button--dense mdc-dialog__footer__button mdc-dialog__footer__button--cancel" type="button">Decline</button>
+            <button class="mdc-button mdc-button--dense mdc-dialog__footer__button mdc-dialog__footer__button--accept" type="button">Accept</button>
         </footer>
     </div>
     <div class="mdc-dialog__backdrop"></div>
