--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
@@ -54,11 +54,11 @@
                     <i class="fa fa-trash" data-command="link_remove"></i>
                 </div>
                 <div class="attribute">
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_2"|trans}}</p>
                         <input name="link_href" value=""/>
                     </div>
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_3"|trans}}</p>
                         <input name="link_text" value=""/>
                     </div>
@@ -75,15 +75,15 @@
                     <input name="image_src" value=""/>
                 </div>
                 <div class="size">
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p class="display_inline_block">{{"wysiwyg_6"|trans}}</p>
                         <input class="display_inline_block" name="image_responsive" type="checkbox" value=""/>
                     </div>
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_7"|trans}}</p>
                         <input name="image_width" value=""/>
                     </div>
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_8"|trans}}</p>
                         <input name="image_height" value=""/>
                     </div>
@@ -96,19 +96,19 @@
                     <i class="fa fa-trash" data-command="button_remove"></i>
                 </div>
                 <div class="attribute">
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_10"|trans}}</p>
                         <textarea class="display_block" name="button_style"></textarea>
                     </div>
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_11"|trans}}</p>
                         <input name="button_class" value=""/>
                     </div>
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_12"|trans}}</p>
                         <input name="button_href" value=""/>
                     </div>
-                    <div class="container_fields">
+                    <div class="field_container">
                         <p>{{"wysiwyg_13"|trans}}</p>
                         <input name="button_text" value=""/>
                     </div>
