--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -2,19 +2,19 @@
 
 <div>
     {% if response.values.userId == null %}
-        <h1 class="mdc-typography--headline6">{% trans %}recover_password_1{% endtrans %}</h1>
+        <h1 class="mdc-typography--headline6">{% trans %}recoverPassword_1{% endtrans %}</h1>
         <form id="form_recover_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.email, {'label': "recover_password_2", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "email"})}}
+            {{form_row(form.email, {'label': "recoverPassword_2", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "email"})}}
             
             {{form_widget(form._token)}}
             
             {{form_widget(form.submit, {'label': "index_12", 'dense': "", 'raised': ""})}}
         </form>
     {% else %}
-        <h1 class="mdc-typography--headline6">{% trans %}recover_password_3{% endtrans %}</h1>
+        <h1 class="mdc-typography--headline6">{% trans %}recoverPassword_3{% endtrans %}</h1>
         <form id="form_change_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.password, {'label': "recover_password_4", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
-            {{form_row(form.passwordConfirm, {'label': "recover_password_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.password, {'label': "recoverPassword_4", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.passwordConfirm, {'label': "recoverPassword_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
             
             {{form_widget(form._token)}}
 
