--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/search.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/search.html.twig
@@ -1,7 +1,7 @@
 <div id="search_result">
     {{-include("@UebusaitoBundleViews/include/table_and_pagination.html.twig")-}}
     
-    <div class="container_list">
+    <div class="list_result">
         {{response.values.listHtml|raw}}
     </div>
 </div>
