--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/wysiwyg.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/wysiwyg.css
@@ -10,7 +10,7 @@
 #wysiwyg .toolbar .popup_settings a { margin-top: 10px; }
 #wysiwyg .toolbar .popup_settings input[type='color'] { margin-bottom: 5px; }
 #wysiwyg .toolbar .popup_settings textarea { resize: none; }
-#wysiwyg .toolbar .popup_settings .container_fields { margin: 10px 0 0 0; }
+#wysiwyg .toolbar .popup_settings .field_container { margin: 10px 0 0 0; }
 #wysiwyg .editor { border: 1px solid; width: 100%; height: 700px; }
 #wysiwyg .source { display: none; position: absolute; top: 31px; border: 1px solid; width: 100%; height: 700px; background-color: #faf9f9; padding: 5px; overflow-y: scroll; }
 
