--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/wysiwyg.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/wysiwyg.scss
@@ -1,5 +1,3 @@
-// Version 1.0.0
-
 #wysiwyg {
     display: none;
     position: relative;
@@ -74,7 +72,7 @@
                 resize: none;
             }
             
-            .container_fields {
+            .field_container {
                 margin: 10px 0 0 0;
             }
         }
