--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table_and_pagination.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table_and_pagination.html.twig
@@ -1,15 +1,15 @@
 <div class="tableAndPagination">
-    <div class="container_buttons">
-        <button class="mdc-button mdc-button--dense mdc-button--raised refresh">
-            {% trans %}table_and_pagination_1{% endtrans %}
+    <div class="button_container">
+        <button class="mdc-button mdc-button--dense mdc-button--raised refresh" type="button">
+            {% trans %}tableAndPagination_1{% endtrans %}
         </button>
-        <button class="mdc-button mdc-button--dense mdc-button--raised delete_all">
-            {% trans %}table_and_pagination_2{% endtrans %}
+        <button class="mdc-button mdc-button--dense mdc-button--raised delete_all" type="button">
+            {% trans %}tableAndPagination_2{% endtrans %}
         </button>
     </div>
     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-text-field--dense">
         <input class="mdc-text-field__input" type="text" value="{{response.values.search.value}}"/>
-        <label class="mdc-floating-label" for="mdc-text-field__input">{% trans %}table_and_pagination_3{% endtrans %}</label>
+        <label class="mdc-floating-label" for="mdc-text-field__input">{% trans %}tableAndPagination_3{% endtrans %}</label>
         <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">search</i>
         <div class="mdc-notched-outline">
             <svg>
@@ -20,14 +20,18 @@
     </div>
     <div>
         <div class="previous">
-            <button class="mdc-button" disabled>{% trans %}table_and_pagination_4{% endtrans %}</button>
+            <button class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>
+                {% trans %}tableAndPagination_4{% endtrans %}
+            </button>
         </div>
         <div class="text">
             <span>{{response.values.pagination.text}}</span>
         </div>
         <div class="next">
-            <button class="mdc-button" disabled>{% trans %}table_and_pagination_5{% endtrans %}</button>
+            <button class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>
+                {% trans %}tableAndPagination_5{% endtrans %}
+            </button>
         </div>
     </div>
-    <p class="count">{% trans %}table_and_pagination_6{% endtrans %} <span>{{response.values.count}}</span></p>
+    <p class="count">{% trans %}tableAndPagination_6{% endtrans %} <span>{{response.values.count}}</span></p>
 </div>
