--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
@@ -2,11 +2,11 @@
     <input class="file" type="file" name="file"/>
     {{-include("@UebusaitoBundleViews/include/progress_bar.html.twig")-}}
     <div class="controls">
-        <button class="mdc-button mdc-button--raised button_start" type="button">
+        <button class="mdc-button mdc-button--dense mdc-button--raised button_start" type="button">
             <i class="material-icons mdc-button__icon" aria-hidden="true">play_arrow</i>
             <span>{% trans %}upload_1{% endtrans %}</span>
         </button>
-        <button class="mdc-button mdc-button--raised button_stop" type="button">
+        <button class="mdc-button mdc-button--dense mdc-button--raised button_stop" type="button">
             <i class="material-icons mdc-button__icon" aria-hidden="true">stop</i>
             <span>{% trans %}upload_2{% endtrans %}</span>
         </button>
