--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_drag.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_drag.html.twig
@@ -1,13 +1,13 @@
 {% form_theme form "bootstrap_3_layout.html.twig" %}
 
 <div>
-    <h3 class="form_title">{% trans %}module_drag_1{% endtrans %}</h3>
+    <h3 class="form_title">{% trans %}moduleDrag_1{% endtrans %}</h3>
     <input id="module_drag_switch" type="checkbox" data-on-color="success" data-off-color="danger">
     <form id="form_cp_module_drag" action="{{path("cp_module_drag", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-        {{form_widget(form.sortHeader, {'label': "module_drag_2"})}}
-        {{form_widget(form.sortLeft, {'label': "module_drag_3"})}}
-        {{form_widget(form.sortCenter, {'label': "module_drag_4"})}}
-        {{form_widget(form.sortRight, {'label': "module_drag_5"})}}
+        {{form_widget(form.sortHeader, {'label': "moduleDrag_2"})}}
+        {{form_widget(form.sortLeft, {'label': "moduleDrag_3"})}}
+        {{form_widget(form.sortCenter, {'label': "moduleDrag_4"})}}
+        {{form_widget(form.sortRight, {'label': "moduleDrag_5"})}}
 
         {{form_widget(form._token)}}
     </form>
