--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_selection.html.twig
@@ -1,4 +1,4 @@
-<h3 class="form_title">{% trans %}module_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}moduleSelection_1{% endtrans %}</h3>
 
 <div id="cp_module_selection_desktop" class="display_desktop">
     <div id="cp_module_selection_result_desktop">
@@ -9,32 +9,32 @@
                 <thead class="table_thead">
                     <tr>
                         <th class="cursor_pointer">
-                            {% trans %}module_selection_2{% endtrans %}
+                            {% trans %}moduleSelection_2{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}module_selection_3{% endtrans %}
+                            {% trans %}moduleSelection_3{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}module_selection_4{% endtrans %}
+                            {% trans %}moduleSelection_4{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}module_selection_5{% endtrans %}
+                            {% trans %}moduleSelection_5{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}module_selection_6{% endtrans %}
+                            {% trans %}moduleSelection_6{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}module_selection_7{% endtrans %}
+                            {% trans %}moduleSelection_7{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
@@ -54,7 +54,7 @@
     
     <div>
         <form id="form_cp_module_selection_mobile" action="{{path("cp_module_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.id, {'label': "module_selection_8"})}}
+            {{form_row(form.id, {'label': "moduleSelection_8"})}}
 
             {{form_widget(form._token)}}
 
