--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -1,72 +1,62 @@
-{% form_theme form "bootstrap_3_layout.html.twig" %}
+{% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
 <div>
-    <h3 class="form_title">{% trans %}page_profile_1{% endtrans %}</h3>
+    <h2 class="mdc-typography--headline6">{% trans %}pageProfile_1{% endtrans %}</h2>
 
     {{-render(controller("UebusaitoBundle:Language:page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 
-    <div class="clearfix page_date">
-        <div>
-            <p><i class="fa fa-paw"></i> <b>{% trans %}page_profile_16{% endtrans %}</b>{{response.values.userCreation}}</p>
-            <p><i class="fa fa-calendar"></i> <b>{% trans %}page_profile_17{% endtrans %}</b>{{response.values.dateCreation[0]}} [{{response.values.dateCreation[1]}}]</p>
-            <p><i class="fa fa-paw"></i> <b>{% trans %}page_profile_18{% endtrans %}</b>{{response.values.userModification}}</p>
-            <p><i class="fa fa-calendar"></i> <b>{% trans %}page_profile_19{% endtrans %}</b>{{response.values.dateModification[0]}} [{{response.values.dateModification[1]}}]</p>
-        </div>
+    <div>
+        <p><i class="fa fa-paw"></i> <b>{% trans %}pageProfile_16{% endtrans %}</b>{{response.values.userCreation}}</p>
+        <p><i class="fa fa-calendar"></i> <b>{% trans %}pageProfile_17{% endtrans %}</b>{{response.values.dateCreation[0]}} [{{response.values.dateCreation[1]}}]</p>
+        <p><i class="fa fa-paw"></i> <b>{% trans %}pageProfile_18{% endtrans %}</b>{{response.values.userModification}}</p>
+        <p><i class="fa fa-calendar"></i> <b>{% trans %}pageProfile_19{% endtrans %}</b>{{response.values.dateModification[0]}} [{{response.values.dateModification[1]}}]</p>
     </div>
 
     <form id="form_cp_page_profile" action="{{path("cp_page_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-        {{form_row(form.language, {'label': "page_profile_2"})}}
-
-        <div class="form-group">
-            {{form_label(form.alias, "page_profile_3")}}
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-header"></i></span>
-                {{form_errors(form.alias)}}
-                {{form_widget(form.alias)}}
-            </div>
+        {{form_row(form.language, {'label': "pageProfile_2"})}}
+        {{form_row(form.alias, {'label': "pageProfile_3", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+        {{form_row(form.parent, {'label': "pageProfile_4", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.title, {'label': "pageProfile_5", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.controllerAction, {'label': "pageProfile_6", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.argument, {'label': "pageProfile_7", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        
+        {#{-include("@UebusaitoBundleViews/include/wysiwyg.html.twig")-}#}
+        
+        <div id="page_roleUserId" class="wordTag_container">
+            <div class="wordTag_result"></div>
+            {{response.values.userRoleSelectHtml|raw}}
+            {{form_row(form.roleUserId)}}
         </div>
+        
+        {{form_row(form.protected, {'label': "pageProfile_9", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.showInMenu, {'label': "pageProfile_10", 'dense': "", 'styleType': "outlinedTrailing"})}}
 
-        {{form_row(form.parent, {'label': "page_profile_4"})}}
-        {{form_row(form.title, {'label': "page_profile_5"})}}
-        {{form_row(form.controllerAction, {'label': "page_profile_6"})}}
-        {{form_row(form.argument, {'label': "page_profile_7"})}}
-        {{-include("@UebusaitoBundleViews/include/wysiwyg.html.twig")-}}
-
-        <div id="page_roleUserId_wordTag_container" class="form-group">
-            {{form_label(form.roleUserId, "page_profile_8")}}
-            {{form_errors(form.roleUserId)}}
-            {{form_widget(form.roleUserId)}}
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-tags"></i></span>
-                {{response.values.userRoleSelectHtml|raw}}
+        <div id="page_menuSort" class="sort_container">
+            <p>{% trans %}pageProfile_11{% endtrans %} <i class="material-icons">list</i></p>
+            <div class="sort_result">
+                {{response.values.pageSortListHtml|raw}}
             </div>
-        </div>
-
-        {{form_row(form.protected, {'label': "page_profile_9"})}}
-        {{form_row(form.showInMenu, {'label': "page_profile_10"})}}
-
-        <div class="form-group">
-            {{form_label(form.positionInMenu, "page_profile_11")}}
-            {{form_errors(form.positionInMenu)}}
-            {{form_widget(form.positionInMenu, {'attr': {'size': '8'}})}}
-
-            {{form_row(form.sort)}}
-            <div id="page_menu_sort">
-                <div class="horizontal_center">
-                    <i id="page_sort_button_up" class="fa fa-caret-square-o-up button_sort"></i>
-                    <i id="page_sort_button_down" class="fa fa-caret-square-o-down button_sort"></i>
-                </div>
+            <div class="sort_control">
+                <button class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>
+                    <i class="material-icons mdc-button__icon button_up" aria-hidden="true">arrow_drop_up</i>
+                    {% trans %}pageProfile_20{% endtrans %}
+                </button>
+                <button class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>
+                    <i class="material-icons mdc-button__icon button_down" aria-hidden="true">arrow_drop_down</i>
+                    {% trans %}pageProfile_21{% endtrans %}
+                </button>
             </div>
+            {{form_row(form.menuSort)}}
         </div>
-
-        {{form_row(form.menuName, {'label': "page_profile_12"})}}
-        {{form_row(form.comment, {'label': "page_profile_13"})}}
-        {{form_row(form.onlyLink, {'label': "page_profile_14"})}}
-        {{form_row(form.link, {'label': "page_profile_15"})}}
+        
+        {{form_row(form.menuName, {'label': "pageProfile_12", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
+        {{form_row(form.comment, {'label': "pageProfile_13", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.onlyLink, {'label': "pageProfile_14", 'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.link, {'label': "pageProfile_15", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "link"})}}
 
         {{form_widget(form._token)}}
 
-        <input class="button_custom" type="submit" value="{% trans %}index_11{% endtrans %}"/>
+        {{form_widget(form.submit, {'label': "index_9", 'dense': "", 'raised': ""})}}
     </form>
 
     {% if is_granted("ROLE_ADMIN") == true and response.values.id > 5 %}
