--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_selection.html.twig
@@ -1,81 +1,78 @@
-<h3 class="form_title">{% trans %}page_selection_1{% endtrans %}</h3>
-
-<div id="cp_page_selection_desktop" class="display_desktop">
-    <div id="cp_page_selection_result_desktop">
-        {{-include("@UebusaitoBundleViews/include/table_and_pagination.html.twig")-}}
-
-        <div class="overflow_y_hidden margin_bottom">
-            <table class="table table-bordered table-striped">
-                <thead class="table_thead">
+<fieldset>
+    <legend>{% trans %}pageSelection_1{% endtrans %}</legend>
+    <p>{% trans %}pageSelection_2{% endtrans %}</p>
+    <div id="cp_page_selection_desktop" class="display_desktop">
+        <div id="cp_page_selection_result_desktop">
+            {{-include("@UebusaitoBundleViews/include/table_and_pagination.html.twig")-}}
+            <table>
+                <thead>
                     <tr>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_2{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_3{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_3{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_4{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_4{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_5{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_5{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_6{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_6{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_7{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_7{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_8{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_8{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_9{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_9{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_10{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
-                        <th class="cursor_pointer">
-                            {% trans %}page_selection_10{% endtrans %}
-                            <i class="fa fa-caret-down"></i>
-                            <i class="fa fa-caret-up"></i>
+                        <th>
+                            <span>{% trans %}pageSelection_11{% endtrans %}</span>
+                            <i class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_up</i>
                         </th>
                     </tr>
                 </thead>
-                <tbody class="table_tbody">
+                <tbody>
                     {{response.values.listHtml|raw}}
                 </tbody>
             </table>
         </div>
+        <button id="cp_page_selection_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button">{% trans %}index_12{% endtrans %}</button>
     </div>
-    <button id="cp_page_selection_button_desktop" class="button_custom" type="button">{% trans %}index_12{% endtrans %}</button>
-</div>
 
-<div id="cp_page_selection_mobile" class="display_mobile">
-    {% form_theme form "bootstrap_3_layout.html.twig" %}
-    
-    <div>
+    <div id="cp_page_selection_mobile" class="display_mobile">
+        {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
+
         <form id="form_cp_page_selection_mobile" action="{{path("cp_page_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.id, {'label': "page_selection_11"})}}
+            {{form_row(form.id, {'label': "pageSelection_12"})}}
 
             {{form_widget(form._token)}}
 
-            <input class="button_custom" type="submit" value="{% trans %}index_12{% endtrans %}"/>
+            {{form_widget(form.submit, {'label': "index_12", 'dense': "", 'raised': ""})}}
         </form>
     </div>
-</div>
 
-<div id="cp_page_selection_result"></div>
+    <div id="cp_page_selection_result"></div>
+</fieldset>
