--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_deletion.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_deletion.html.twig
@@ -1,3 +1,2 @@
-<h3 class="form_title">{% trans %}payment_deletion_1{% endtrans %}</h3>
-<p>{% trans %}payment_deletion_2{% endtrans %}</p>
-<button id="cp_payment_deletion" class="button_custom_danger" type="button">{% trans %}index_10{% endtrans %}</button>
+<p>{% trans %}paymentDeletion_1{% endtrans %}</p>
+<button id="cp_payment_deletion" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">{% trans %}index_10{% endtrans %}</button>
