--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_profile.html.twig
@@ -1,15 +1,79 @@
 <div>
-    <h3 class="form_title">{% trans %}payment_profile_1{% endtrans %}</h3>
-
-    <p><b>{% trans %}payment_profile_2{% endtrans %}:</b> {{response.values.payment.transaction}}</p>
-    <p><b>{% trans %}payment_profile_3{% endtrans %}:</b> {{response.values.payment.date}}</p>
-    <p><b>{% trans %}payment_profile_4{% endtrans %}:</b> {{response.values.payment.status}}</p>
-    <p><b>{% trans %}payment_profile_5{% endtrans %}:</b> {{response.values.payment.payer}}</p>
-    <p><b>{% trans %}payment_profile_6{% endtrans %}:</b> {{response.values.payment.receiver}}</p>
-    <p><b>{% trans %}payment_profile_7{% endtrans %}:</b> {{response.values.payment.currencyCode}}</p>
-    <p><b>{% trans %}payment_profile_8{% endtrans %}:</b> {{response.values.payment.itemName}}</p>
-    <p><b>{% trans %}payment_profile_9{% endtrans %}:</b> {{response.values.payment.amount}}</p>
-    <p><b>{% trans %}payment_profile_10{% endtrans %}:</b> {{response.values.payment.quantity}}</p>
+    <h2 class="mdc-typography--headline6">{% trans %}paymentProfile_1{% endtrans %}</h2>
+    
+    <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list">
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_2{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.transaction}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_3{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.date}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_4{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.status}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_5{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.payer}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_6{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.receiver}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_7{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.currencyCode}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_8{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.itemName}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_9{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.amount}}</span>
+            </span>
+        </li>
+        <li role="separator" class="mdc-list-divider"></li>
+        <li class="mdc-list-item">
+            <span class="mdc-list-item__graphic material-icons" aria-hidden="true">info</span>
+            <span class="mdc-list-item__text">
+                {% trans %}paymentProfile_10{% endtrans %}
+                <span class="mdc-list-item__secondary-text">{{response.values.payment.quantity}}</span>
+            </span>
+        </li>
+    </ul>
 
     {% if is_granted("ROLE_ADMIN") == true %}
         {{-include("@UebusaitoBundleViews/render/control_panel/payment_deletion.html.twig")-}}
