--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
@@ -1,20 +1,18 @@
 {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-<form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-    <fieldset class="container_accordion">
-        <legend>{% trans %}profile_password_1{% endtrans %}</legend>
-        <p>{% trans %}profile_password_2{% endtrans %}</p>
-        <button class="mdc-button mdc-button--raised button_accordion" type="button">
-            {% trans %}index_14{% endtrans %}
-        </button>
-        <div class="accordion">
-            {{form_row(form.old, {'label': "profile_password_3", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
-            {{form_row(form.new, {'label': "profile_password_4", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
-            {{form_row(form.newConfirm, {'label': "profile_password_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+<fieldset class="accordion_container">
+    <legend>{% trans %}profilePassword_1{% endtrans %}</legend>
+    <p>{% trans %}profilePassword_2{% endtrans %}</p>
+    <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_14{% endtrans %}</button>
+    <div class="accordion">
+        <form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            {{form_row(form.old, {'label': "profilePassword_3", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.new, {'label': "profilePassword_4", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
+            {{form_row(form.newConfirm, {'label': "profilePassword_5", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
 
             {{form_widget(form._token)}}
             
             {{form_widget(form.submit, {'label': "index_11", 'dense': "", 'raised': ""})}}
-        </div>
-    </fieldset>
-</form>
+        </form>
+    </div>
+</fieldset>
