--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_creation.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_creation.html.twig
@@ -1,10 +1,10 @@
 {% form_theme form "bootstrap_3_layout.html.twig" %}
 
 <div>
-    <h3 class="form_title">{% trans %}roleUser_creation_1{% endtrans %}</h3>
+    <h3 class="form_title">{% trans %}roleUserCreation_1{% endtrans %}</h3>
     <form id="form_cp_roleUser_creation" action="{{path("cp_roleUser_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         <div class="form-group">
-            {{form_label(form.level, "roleUser_creation_2")}}
+            {{form_label(form.level, "roleUserCreation_2")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-header"></i></span>
                 {{form_errors(form.level)}}
