--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_profile.html.twig
@@ -1,10 +1,10 @@
 {% form_theme form "bootstrap_3_layout.html.twig" %}
 
 <div>
-    <h3 class="form_title">{% trans %}roleUser_profile_1{% endtrans %}</h3>
+    <h3 class="form_title">{% trans %}roleUserProfile_1{% endtrans %}</h3>
     <form id="form_cp_roleUser_profile" action="{{path("cp_roleUser_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         <div class="form-group">
-            {{form_label(form.level, "roleUser_profile_2")}}
+            {{form_label(form.level, "roleUserProfile_2")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-header"></i></span>
                 {{form_errors(form.level)}}
