--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roleUser_selection.html.twig
@@ -1,4 +1,4 @@
-<h3 class="form_title">{% trans %}roleUser_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}roleUserSelection_1{% endtrans %}</h3>
 
 <div id="cp_roleUser_selection_desktop" class="display_desktop">
     <div id="cp_roleUser_selection_result_desktop">
@@ -9,22 +9,22 @@
                 <thead class="table_thead">
                     <tr>
                         <th class="cursor_pointer">
-                            {% trans %}roleUser_selection_2{% endtrans %}
+                            {% trans %}roleUserSelection_2{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}roleUser_selection_3{% endtrans %}
+                            {% trans %}roleUserSelection_3{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}roleUser_selection_4{% endtrans %}
+                            {% trans %}roleUserSelection_4{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}roleUser_selection_5{% endtrans %}
+                            {% trans %}roleUserSelection_5{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
@@ -44,7 +44,7 @@
     
     <div>
         <form id="form_cp_roleUser_selection_mobile" action="{{path("cp_roleUser_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.id, {'label': "roleUser_selection_6"})}}
+            {{form_row(form.id, {'label': "roleUserSelection_6"})}}
 
             {{form_widget(form._token)}}
 
