--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_deletion.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_deletion.html.twig
@@ -1,3 +1,3 @@
-<h3 class="form_title">{% trans %}user_deletion_1{% endtrans %}</h3>
-<p>{% trans %}user_deletion_2{% endtrans %}</p>
+<h3 class="form_title">{% trans %}userDeletion_1{% endtrans %}</h3>
+<p>{% trans %}userDeletion_2{% endtrans %}</p>
 <button id="cp_user_deletion" class="button_custom_danger" type="button">{% trans %}index_10{% endtrans %}</button>
