--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_profile.html.twig
@@ -1,11 +1,11 @@
 {% form_theme form "bootstrap_3_layout.html.twig" %}
 
 <div>
-    <h3 class="form_title">{% trans %}user_profile_1{% endtrans %}</h3>
+    <h3 class="form_title">{% trans %}userProfile_1{% endtrans %}</h3>
     <form id="form_cp_user_profile" action="{{path("cp_user_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {% if is_granted("ROLE_ADMIN") == true %}
             <div id="user_roleUserId_wordTag_container" class="form-group">
-                {{form_label(form.roleUserId, "user_profile_2")}}
+                {{form_label(form.roleUserId, "userProfile_2")}}
                 {{form_errors(form.roleUserId)}}
                 {{form_widget(form.roleUserId)}}
                 <div class="input-group">
@@ -16,7 +16,7 @@
         {% endif %}
 
         <div class="form-group">
-            {{form_label(form.username, "user_profile_3")}}
+            {{form_label(form.username, "userProfile_3")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-paw"></i></span>
                 {{form_errors(form.username)}}
@@ -24,11 +24,11 @@
             </div>
         </div>
 
-        {{form_row(form.name, {'label': "user_profile_4"})}}
-        {{form_row(form.surname, {'label': "user_profile_5"})}}
+        {{form_row(form.name, {'label': "userProfile_4"})}}
+        {{form_row(form.surname, {'label': "userProfile_5"})}}
 
         <div class="form-group">
-            {{form_label(form.email, "user_profile_6")}}
+            {{form_label(form.email, "userProfile_6")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                 {{form_errors(form.email)}}
@@ -36,24 +36,24 @@
             </div>
         </div>
 
-        {{form_row(form.telephone, {'label': "user_profile_7"})}}
-        {{form_row(form.born, {'label': "user_profile_8"})}}
-        {{form_row(form.gender, {'label': "user_profile_9"})}}
+        {{form_row(form.telephone, {'label': "userProfile_7"})}}
+        {{form_row(form.born, {'label': "userProfile_8"})}}
+        {{form_row(form.gender, {'label': "userProfile_9"})}}
 
         {% if form.fiscalCode.vars.value != "" %}
-            {{form_row(form.fiscalCode, {'label': "user_profile_10"})}}
-            {{form_row(form.companyName, {'label': "user_profile_11"})}}
-            {{form_row(form.vat, {'label': "user_profile_12"})}}
+            {{form_row(form.fiscalCode, {'label': "userProfile_10"})}}
+            {{form_row(form.companyName, {'label': "userProfile_11"})}}
+            {{form_row(form.vat, {'label': "userProfile_12"})}}
         {% endif %}
 
-        {{form_row(form.website, {'label': "user_profile_13"})}}
-        {{form_row(form.state, {'label': "user_profile_14"})}}
-        {{form_row(form.city, {'label': "user_profile_15"})}}
-        {{form_row(form.zip, {'label': "user_profile_16"})}}
-        {{form_row(form.address, {'label': "user_profile_17"})}}
+        {{form_row(form.website, {'label': "userProfile_13"})}}
+        {{form_row(form.state, {'label': "userProfile_14"})}}
+        {{form_row(form.city, {'label': "userProfile_15"})}}
+        {{form_row(form.zip, {'label': "userProfile_16"})}}
+        {{form_row(form.address, {'label': "userProfile_17"})}}
 
         <div class="form-group">
-            {{form_label(form.password, "user_profile_18")}}
+            {{form_label(form.password, "userProfile_18")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-key"></i></span>
                 {{form_errors(form.password)}}
@@ -62,7 +62,7 @@
         </div>
 
         <div class="form-group">
-            {{form_label(form.passwordConfirm, "user_profile_19")}}
+            {{form_label(form.passwordConfirm, "userProfile_19")}}
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-key"></i></span>
                 {{form_errors(form.passwordConfirm)}}
@@ -70,10 +70,10 @@
             </div>
         </div>
 
-        {{form_row(form.notLocked, {'label': "user_profile_20"})}}
+        {{form_row(form.notLocked, {'label': "userProfile_20"})}}
 
         <div class="form-group">
-            <label class="control-label required" for="user_credit">{% trans %}user_profile_21{% endtrans %}</label>
+            <label class="control-label required" for="user_credit">{% trans %}userProfile_21{% endtrans %}</label>
             <div class="input-group">
                 <p id ="user_credit">{{response.values.credit}}</p>
             </div>
