--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_selection.html.twig
@@ -1,4 +1,4 @@
-<h3 class="form_title">{% trans %}user_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}userSelection_1{% endtrans %}</h3>
 
 <div id="cp_user_selection_desktop" class="display_desktop">
     <div id="cp_user_selection_result_desktop">
@@ -9,52 +9,52 @@
                 <thead class="table_thead">
                     <tr>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_2{% endtrans %}
+                            {% trans %}userSelection_2{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_3{% endtrans %}
+                            {% trans %}userSelection_3{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_4{% endtrans %}
+                            {% trans %}userSelection_4{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_5{% endtrans %}
+                            {% trans %}userSelection_5{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_6{% endtrans %}
+                            {% trans %}userSelection_6{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_7{% endtrans %}
+                            {% trans %}userSelection_7{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_8{% endtrans %}
+                            {% trans %}userSelection_8{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_9{% endtrans %}
+                            {% trans %}userSelection_9{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_10{% endtrans %}
+                            {% trans %}userSelection_10{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
                         <th class="cursor_pointer">
-                            {% trans %}user_selection_11{% endtrans %}
+                            {% trans %}userSelection_11{% endtrans %}
                             <i class="fa fa-caret-down"></i>
                             <i class="fa fa-caret-up"></i>
                         </th>
@@ -74,7 +74,7 @@
 
     <div>
         <form id="form_cp_user_selection_mobile" action="{{path("cp_user_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form.id, {'label': "user_selection_12"})}}
+            {{form_row(form.id, {'label': "userSelection_12"})}}
 
             {{form_widget(form._token)}}
 
